Fixed bug #44952 (isset() does not checks correctly variable variable)